# worldcup_2026_predictor

./: .env.example  .gitignore  .ipa-ck.json  CLAUDE.md  Caddyfile  IPA-WORKFLOW.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.job  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  observability.py
backend/app/api/: briefs.py  feedback.py  fixtures.py  logs.py  results.py  standings.py
backend/app/data/: api_football.py  availability.py  collect.py  models.py  repository.py  seed_e2e_fixture.py  seed_finished_match.py  seed_openfootball.py  seed_social_fixture.py  source.py  standings_math.py
backend/app/llm/: deepseek.py
backend/app/pipeline/: forecast.py  graph.py  live_poller.py  live_winprob_agent.py  nodes_editor.py  (+8 more)
backend/db/: alembic.ini
backend/tests/: test_api_football_mapping.py  test_availability.py  test_collect_live.py  test_feedback.py  test_fixture_detail_endpoint.py  test_fixture_forecast_signals.py  test_fixture_statistics_shaping.py  test_fixtures_shaping.py  test_ko_forecast.py  test_live_winprob_agent.py  test_match_events.py  test_match_forecast.py  test_match_statistics.py  test_match_verdict.py  test_news_source.py  test_observability.py  test_qualification_flow.py  test_recent_results.py  test_results_endpoint.py  test_scheduler_tz.py  test_social_adapters.py  test_social_backfill.py  test_social_select.py  test_social_selector.py  test_standings_math.py  test_standings_trend.py  test_winprob.py  test_x_ingest.py
(+238 files in other folders)
