[project]
name = "worldcup-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    # Imported directly in nodes_collector (@traceable); pin explicitly rather
    # than rely on the langchain-core transitive.
    "langsmith>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
